--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http:
   shared_preferences: ^2.0.15
   google_fonts: ^3.0.1
+  simple_animations: ^1.3.3
+  #provider: ^4.0.0
 
 
 
