--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.15
   google_fonts: ^3.0.1
   simple_animations: ^1.3.3
+  image_picker:
   #provider: ^4.0.0
 
 
