--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^3.0.1
   simple_animations: ^1.3.3
   image_picker:
+  carousel_slider: ^4.2.1
   #provider: ^4.0.0
 
 
