--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   simple_animations: ^1.3.3
   image_picker:
   carousel_slider: ^4.2.1
+  date_time_picker: ^2.1.0
+  intl: ^0.18.0
   #provider: ^4.0.0
 
 
