--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   image_picker:
   carousel_slider: ^4.2.1
   date_time_picker: ^2.1.0
-  intl: ^0.18.0
+  intl:
   #provider: ^4.0.0
 
 
